# TGH-Planner

./: .gitignore  README.md
TGH_Planner/bspline/: CMakeLists.txt
TGH_Planner/bspline_opt/: CMakeLists.txt
TGH_Planner/common_srvs/: CMakeLists.txt
TGH_Planner/common_srvs/srv/: load_or_save_global_map.srv  traj_record.srv
TGH_Planner/path_searching/: CMakeLists.txt  package.xml
TGH_Planner/path_searching/src/: astar.cpp  astar_2D.cpp  kinodynamic_astar.cpp  kinodynamic_astar_2D.cpp  topo_prm.cpp
TGH_Planner/plan_env/: CMakeLists.txt  package.xml
TGH_Planner/plan_env/src/: sdf_map.cpp
TGH_Planner/plan_manage/: CMakeLists.txt
TGH_Planner/plan_manage/config/: point_accum.rviz  traj copy.rviz  traj.rviz  traj_TGH.rviz  traj_egvg_vis.rviz  waypts_2d.yaml
TGH_Planner/plan_manage/launch/: kino_algorithm.xml  kino_replan.launch  rviz.launch  (+3 more)
Utils/egvg_record/: CMakeLists.txt  package.xml
Utils/raycast_test/: CMakeLists.txt  package.xml
Utils/save_map_point/: CMakeLists.txt  package.xml
Utils/save_map_point/launch/: egvg_vis.launch  map_img_pub.launch  map_pub.launch  map_save.launch  point_accum.launch
Utils/save_map_point/map_point/: icra0_egvg_tesear.txt  icra0_egvg_tesear2.txt
Utils/save_map_point/map_point/scripts/: convert_image.py  convert_mappt_img.py
Utils/save_map_point/src/: dbscan.py  egvg_vis.cpp  egvg_vis.py  extract_pt_from_rosbag.py  pointcloud_accumulator.cpp  pub_map.py  pub_map_img.py  pub_trajectory.py  save_map_point.cpp
Utils/teb_nav/: CMakeLists.txt  package.xml
Utils/teb_nav/config/: costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
Utils/teb_nav/launch/: teb_nav.launch
Utils/topo_prm_planner/: CMakeLists.txt  package.xml
Utils/topo_prm_planner/config/: topo_test.rviz
Utils/topo_prm_planner/launch/: topo_prm_planner.launch
Utils/topo_prm_planner/maps/: generate_map.py  map.yaml  transfer_image.py
Utils/topo_prm_planner/src/: TopoRpmPlan.h  plan_container.hpp  publish_nav_goal.cc  topo_prm_plan_node.cc
Utils/traj_analysis/: CMakeLists.txt  calPathInfo  calTrajInfo  drawTrajMap  package.xml  traj_real_vel.txt
Utils/traj_analysis/src/: calPathInfo.cpp  calTrajInfo.cpp  drawTrajDirMap.cpp  drawTrajMap.cpp
Utils/waypoint_generator/: package.xml
car_simulator/car_mpc/: CMakeLists.txt
car_simulator/car_simulator/: CMakeLists.txt
common_srvs/: package.xml
common_srvs/srv/: set_init_pose.srv
dynamicvoronoi/: CMakeLists.txt  package.xml
dynamicvoronoi/include/dvr/: DBSCAN2D.h  GVG.h  VoronoiPlanner.h  bucketedqueue.h  point.h  voronoi_layer.h
dynamicvoronoi/launch/: voronoi_planner.launch
dynamicvoronoi/src/: dynamicvoronoi.cpp  raycast.cpp  voronoi_layer.cpp  voronoi_planner_node.cpp
fast_planner/bspline/: CMakeLists.txt
fast_planner/bspline_opt/: CMakeLists.txt
fast_planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
fast_planner/bspline_opt/src/: bspline_optimizer.cpp  nlopt_test.cpp
fast_planner/path_searching/: CMakeLists.txt  package.xml
fast_planner/path_searching/include/: threadPool.h
fast_planner/path_searching/include/path_searching/: astar_2D.h  jump_point_search.h  kinodynamic_astar.h  kinodynamic_astar_2D.h  topo_prm.h
fast_planner/path_searching/src/: astar_2D.cpp  check_transit.py  dubins.cpp  jump_point_search.cpp  kinodynamic_astar_2D.cpp  topo_prm.cpp
fast_planner/plan_env/: CMakeLists.txt  package.xml
fast_planner/plan_manage/: CMakeLists.txt  package.xml
fast_planner/poly_traj/: CMakeLists.txt
fast_planner/traj_utils/: CMakeLists.txt
gazebo_sim/gazebo_simulator/: CMakeLists.txt
send_cmd/: CMakeLists.txt  package.xml
send_cmd/include/: tcp_communication.h
send_cmd/src/: client_main.cpp  send_cmd.cpp  server_main.cpp  tcp_communication.cpp
test/: draw_acc.py  draw_ctrl_pt_yaw.py  draw_curavate.py  draw_path.py  draw_vel.py  draw_w.py  draw_yaw.py
test/data/: acc_init.txt  acc_mid.txt  acc_opt.txt  acc_perception.txt  acc_reall.txt  acc_yaw_constr.txt  angle_opt1.txt  angle_opt2.txt  angle_vel_constr.txt  angle_vel_opt1.txt  angle_vel_opt2.txt  ctrlYawConstr_init.txt  ctrlYawConstr_mid.txt  ctrlYawConstr_opt.txt  ctrlYawConstr_perception.txt  ctrlYawConstr_yaw_constr.txt  ctrlYawDot_init.txt  ctrlYawDot_mid.txt  ctrlYawDot_opt.txt  ctrlYawDot_perception.txt  ctrlYawDot_yaw_constr.txt  ctrlYaw_init.txt  ctrlYaw_mid.txt  ctrlYaw_opt.txt  ctrlYaw_perception.txt  ctrlYaw_yaw_constr.txt  curv_geo.txt  curv_init.txt  curv_mid.txt  curv_opt.txt  curv_perception.txt  curv_reall.txt  curv_yaw_constr.txt  path_ctrl_init.txt  path_ctrl_mid.txt  path_ctrl_opt.txt  path_ctrl_reall.txt  path_ctrl_yaw_constr.txt  path_geo.txt  path_init.txt  (+19 more)
test/debuglog/: 20241129-174941.2875548  20241129-180138.2890309
test/test/: drawFivePoints.py  draw_atan2.py  test_raycast.py  transit_curve.py
test/traj_record/: CMakeLists.txt  calPathInfo  calTrajInfo  drawTrajDirMap  drawTrajMap  traj_real_vel.txt
uav_simulator/car_mpc/: CMakeLists.txt  nodelet_plugin.xml  package.xml
uav_simulator/car_mpc/include/: car_mpc.hpp  iosqp.hpp
uav_simulator/car_mpc/launch/: play_bag.launch  simulation.launch
uav_simulator/car_mpc/src/: car_mpc_nodelet.cpp
uav_simulator/car_simulator/: CMakeLists.txt
uav_simulator/dynamicvoronoi/: CMakeLists.txt  package.xml
uav_simulator/dynamicvoronoi/include/: Utils.h
uav_simulator/dynamicvoronoi/include/dvr/: GVG.h  VoronoiPlanner.h  dynamicvoronoi.h  point.h  voronoi_layer.h
uav_simulator/dynamicvoronoi/src/: dynamicvoronoi.cpp  mainLauMethod.cpp  voronoi_layer.cpp  voronoi_planner_node.cpp
uav_simulator/gazebo_simulator/: CMakeLists.txt  package.xml
uav_simulator/gazebo_simulator/launch/: gazebo_sim.launch  test_new_platform.launch
uav_simulator/gazebo_simulator/src/: pub_tf.py  record_gazebo_data.cc  set_robot_pose.cc
uav_simulator/gazebo_simulator/urdf/: box.urdf  box.xacro  camera_sensor.xacro
uav_simulator/gazebo_simulator/world/: UOR.world  icra0.world  zigzag7.world
uav_simulator/local_sensing/: CMakeLists.txt
uav_simulator/map_generator/: CMakeLists.txt  package.xml
(+412 files in other folders)
