<package format="2">
  <name>common_srvs</name>
  <version>0.0.1</version>
  <description>Common services package</description>

  <maintainer email="qhb@todo.todo">qhb</maintainer>

  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
</package>

