<?xml version="1.0"?>
<package format="2">
  <name>send_cmd</name>
  <version>0.0.0</version>
  <description>The send_cmd package</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>bspline</depend>
  <depend>plan_manage</depend>

  <export>

  </export>
</package>
