<?xml version="1.0"?>
<package format="2">
  <name>car_mpc</name>
  <version>0.0.0</version>
  <description>The car_mpc package</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>car_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>
</package>
